--- a/app/src/main/res/drawable/bg_inactive_dhaba_status.xml
+++ b/app/src/main/res/drawable/bg_inactive_dhaba_status.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="5dp" />
 
-    <solid android:color="@color/gold_light" />
+    <solid android:color="#FBE0E0" />
 
 </shape>
