--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -76,13 +76,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
-                    android:fontFamily="@font/opensans_regular"
+                    android:fontFamily="@font/opensans_semibold"
                     android:paddingHorizontal="7dp"
                     android:paddingVertical="3dp"
-                    android:text="@{model.status}"
-                    android:textColor="@{model.status.equalsIgnoreCase(model.Companion.STATUS_PENDING) ? context.getColor(R.color.gold) : context.getColor(R.color.greenText)}"
+                    android:text="@{model.status.toUpperCase()}"
+                    android:textColor="@{model.status.equalsIgnoreCase(model.Companion.STATUS_PENDING) ? context.getColor(R.color.gold) :model.status.equalsIgnoreCase(model.Companion.STATUS_ACTIVE)? context.getColor(R.color.greenText) : context.getColor(R.color.colorRed)}"
+                    android:textSize="@dimen/_8ssp"
                     android:visibility="@{user.isOwner() ? View.VISIBLE : View.GONE}"
-                    app:backgroundResource="@{model.status.equalsIgnoreCase(model.Companion.STATUS_PENDING) ? R.drawable.bg_pending_dhaba_status : R.drawable.bg_active_dhaba_status}" />
+                    app:backgroundResource="@{model.status.equalsIgnoreCase(model.Companion.STATUS_PENDING) ? R.drawable.bg_pending_dhaba_status : model.status.equalsIgnoreCase(model.Companion.STATUS_ACTIVE)? R.drawable.bg_active_dhaba_status :  R.drawable.bg_inactive_dhaba_status}" />
 
             </LinearLayout>
 
