--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -110,7 +110,7 @@
                 android:layout_marginStart="@dimen/_4sdp"
                 android:background="@android:color/transparent"
                 android:hint="@string/enter_mobile_number_mandatory"
-                android:inputType="number"
+                android:inputType="phone"
                 android:maxLength="10"
                 android:padding="@dimen/_10sdp"
                 android:text="@={userModel.mobile}"
