--- a/app/src/main/res/layout/fragment_owner_details.xml
+++ b/app/src/main/res/layout/fragment_owner_details.xml
@@ -119,7 +119,7 @@
                         android:layout_marginStart="@dimen/_4sdp"
                         android:background="@android:color/transparent"
                         android:hint="@string/enter_mobile_number_mandatory"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="10"
                         android:text="@={viewModel.ownerModel.mobile}"
                         android:textColor="@color/black"
@@ -311,7 +311,7 @@
                         android:layout_marginStart="@dimen/_4sdp"
                         android:background="@android:color/transparent"
                         android:hint="@string/alternative_mobile_number"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="10"
                         android:text="@={viewModel.ownerModel.alternatePhone}"
                         android:textColor="@color/black"
