--- a/app/src/main/res/layout/fragment_discounts.xml
+++ b/app/src/main/res/layout/fragment_discounts.xml
@@ -13,6 +13,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent">
 
         <LinearLayout
