--- a/app/src/main/res/layout/row_shop_list.xml
+++ b/app/src/main/res/layout/row_shop_list.xml
@@ -1,5 +1,4 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -40,9 +39,9 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top"
                 android:layout_weight="1"
                 android:gravity="top"
-                android:layout_gravity="top"
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -60,10 +59,10 @@
                     android:id="@+id/tv_points"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_4sdp"
-                    android:orientation="vertical"
-                    android:background="@color/light_red"
                     android:layout_marginStart="@dimen/_8sdp"
+                    android:background="@color/light_red"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_4sdp"
                     android:text="@{data.points + ` Points`}"
                     android:textColor="@color/colorAccent"
                     android:textSize="@dimen/_12ssp"
@@ -73,22 +72,23 @@
                     android:id="@+id/tv_required_points"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_4sdp"
                     android:layout_marginStart="@dimen/_8sdp"
                     android:orientation="vertical"
-                    android:visibility="@{(data.requiredPoints == 0) ? View.GONE : View.VISIBLE}"
+                    android:padding="@dimen/_4sdp"
                     android:text="@{data.requiredPoints + ` more points required`}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp"
+                    android:visibility="@{(data.requiredPoints == 0) ? View.GONE : View.VISIBLE}"
                     tools:text="Contact Number" />
             </LinearLayout>
 
             <ImageView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_marginStart="@dimen/_4sdp"
-                android:visibility="@{(data.requiredPoints == 0) ? View.VISIBLE : View.GONE}"
-                android:src="@drawable/ic_call_red"/>
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/ic_cart_add"
+                android:visibility="@{(data.requiredPoints == 0) ? View.VISIBLE : View.GONE}" />
         </LinearLayout>
 
         <View
