--- a/app/src/main/res/layout/fragment_dhaba_details.xml
+++ b/app/src/main/res/layout/fragment_dhaba_details.xml
@@ -478,6 +478,7 @@
                     android:id="@+id/cl_times"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/uploadedImageRecycler">
