--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:visibility="@{userModel.isManager() ? View.GONE : View.VISIBLE}">
 
                 <TextView
                     android:layout_width="0dp"
@@ -66,7 +67,8 @@
                     android:text="@string/add_new"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:visibility="@{userModel.isManager() ? View.GONE : View.VISIBLE}" />
 
             </LinearLayout>
 
@@ -75,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:visibility="@{userModel.isOwner() ? View.GONE : View.VISIBLE}"
+                android:visibility="@{(userModel.isOwner() || userModel.isManager()) ? View.GONE : View.VISIBLE}"
                 app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                 app:tabTextColor="@color/tabs_text_selector">
 
