--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        app:cardCornerRadius="@dimen/_15sdp"
         android:elevation="10dp"
         app:cardBackgroundColor="@android:color/white">
 
